--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Cards Against Humanity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    
+    <string name="start_new_game">Start New Game</string>
+    <string name="join_multiplayer_game">Join Multiplayer Game</string>
+    <string name="how_to_play">How to play</string>
 
 </resources>
