--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,9 +4,28 @@
     <string name="app_name">Cards Against Humanity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    
     <string name="start_new_game">Start New Game</string>
     <string name="join_multiplayer_game">Join Multiplayer Game</string>
     <string name="how_to_play">How to play</string>
+
+    <!-- Start New Game screen -->
+    <string-array name="gameType_array">
+        <item>Local Multiplayer</item>
+        <item>Local Single Player </item>
+    </string-array>
+
+    <string name="game_name">Game name:</string>
+    <string name="game_type">Game type:</string>
+    <string name="point_limit">Point Limit:</string>
+    <string name="round_limit">Round limit:</string>
+    <string name="idle_time_limit">Idle Time Limit:</string>
+    <string name="max_players">Max players:</string>
+    <string name="family_friendly">Family Friendly:</string>
+    <string name="password">Password:</string>
+    <string name="create_game">Create Game:</string>
+    
+    <string name="start_new_game_game_type_description">Select &quot;Local Single Player&quot; to play against computer players on your own. Select a &quot;Multiplayer&quot; mode to play against other people, either nearby (Local) or Online.</string>
+    <string name="start_new_game_point_limit_description">The game is over once a player reaches this score. Tap the button to change the point limit.</string>
+    <string name="start_new_game_family_friendly_description">Filters out cards with profanity, etc. Check/Unckeck to change this setting</string>
 
 </resources>
