--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,14 @@
         <item>Local Multiplayer</item>
         <item>Local Single Player </item>
     </string-array>
+    
+     <string-array name="timeLimit_array">
+        <item>10s</item>
+        <item>15s</item>
+        <item>20s</item>
+        <item>30s</item>
+        <item>60s</item>
+    </string-array>
 
     <string name="game_name">Game name:</string>
     <string name="game_type">Game type:</string>
@@ -22,7 +30,9 @@
     <string name="max_players">Max players:</string>
     <string name="family_friendly">Family Friendly:</string>
     <string name="password">Password:</string>
-    <string name="create_game">Create Game:</string>
+    <string name="create_game">Create Game</string>
+    <string name="cancel">Cancel</string>
+    
     
     <string name="start_new_game_game_type_description">Select &quot;Local Single Player&quot; to play against computer players on your own. Select a &quot;Multiplayer&quot; mode to play against other people, either nearby (Local) or Online.</string>
     <string name="start_new_game_point_limit_description">The game is over once a player reaches this score. Tap the button to change the point limit.</string>
