--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Cards Against Humanity</string>
+    <string name="app_name">Party Cards</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="start_new_game">Start New Game</string>
@@ -18,5 +18,7 @@
     <string name="start_new_game_point_limit_description">The game is over once a player reaches this score. Tap the button to change the point limit.</string>
     <string name="start_new_game_max_players_description">How many players should be playing with you.</string>
     <string name="start_new_game_round_limit_description">The game is over once the round limit is reached. Tap the button to change the point limit.</string>
-
+    
+    <!-- New Round screen -->
+	<string name="round">Round</string>
 </resources>
