--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,8 +18,14 @@
     <!-- New Round screen -->
     <string name="round">Round</string>
     <string name="skip">Skip</string>
-    
+
+    <!-- In-game screen -->
     <string name="left">&lt;</string>
     <string name="right">&gt;</string>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="whiteT">#99FFFFFF</color>
+    <color name="blackT">#99000000</color>
 
 </resources>
