--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="start_new_game">Start New Game</string>
     <string name="how_to_play">How to play</string>
+    <string name="logo">Logo</string>
 
     <!-- Start New Game screen -->
     <string name="point_limit">Point Limit:</string>
@@ -22,6 +23,7 @@
     <!-- In-game screen -->
     <string name="left">&lt;</string>
     <string name="right">&gt;</string>
+    <string name="helperInGame">Tap arrows to scroll through your cards. Tap a card to select it to play.</string>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
