--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,11 +7,13 @@
     <string name="start_new_game">Start New Game</string>
     <string name="how_to_play">How to play</string>
     <string name="logo">Logo</string>
+    <string name="players">Setting up Players</string>
 
     <!-- Start New Game screen -->
     <string name="point_limit">Point Limit:</string>
     <string name="max_players">Number players:</string>
     <string name="start_game">Start Game</string>
+    <string name="next">Next</string>
     <string name="cancel">Cancel</string>
     <string name="start_new_game_point_limit_description">The game is over once a player reaches this score. Tap the button to change the point limit.</string>
     <string name="start_new_game_max_players_description">How many players should be playing with you.</string>
