Leave game button : working
Important! Now the cards are created at the "NewGame" scren, and not at
the "MainActivity" anymore.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="how_to_play">How to play</string>
     <string name="logo">Logo</string>
     <string name="players">Setting up Players</string>
+    <string name="leave_game">Leave Game</string>
+    <string name="leave_game_message">Are you sure you want to leave the game?</string>
 
     <!-- Start New Game screen -->
     <string name="point_limit">Point Limit:</string>
