--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="next">Next</string>
     <string name="cancel">Cancel</string>
     <string name="start_new_game_point_limit_description">The game is over once a player reaches this score. Tap the button to change the point limit.</string>
-    <string name="start_new_game_max_players_description">How many players should be playing with you.</string>
+    <string name="start_new_game_max_players_description">How many players will be playing (include all players).</string>
 
     <!-- New Round screen -->
     <string name="round">Round</string>
