--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,6 +23,7 @@
     <!-- New Round screen -->
     <string name="round">Round</string>
     <string name="skip">Continue</string>
+    <string name="its_your_turn">It\&apos;s your turn</string>
 
     <!-- In-game screen -->
     <string name="left">&lt;</string>
