--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="start_game">Start Game</string>
     <string name="next">Next</string>
     <string name="cancel">Cancel</string>
-    <string name="start_new_game_point_limit_description">The game is over once a player reaches this score. Tap the text space to change the point limit.</string>
+    <string name="start_new_game_point_limit_description">The game is over once a player reaches this score.</string>
     <string name="start_new_game_max_players_description">How many players will play (includes all players).</string>
     <string name="blank_point_limit_toast">Please choose the point limit</string>
     <string name="blank_player_limit_toast">Please complete the number of players</string>
