--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,7 +28,7 @@
     <!-- New Round screen -->
     <string name="round">Round</string>
     <string name="skip">Continue</string>
-    <string name="its_your_turn">It\&apos;s your turn</string>
+    <string name="its_your_turn">\&apos;s turn!</string>
     <string name="pass_device">Please pass the phone to</string>
 
     <!-- In-game screen -->
